# Resumation-Automation-v3

./: .gitignore  General Notes.txt  README.md  cover-letters-generator.jsx  jobs-extracted.csv  jobs.csv  main.py  pyproject.toml
