[tool.poetry]
name = "resumation automation v3"
version = "0.1.0"
description = ""
authors = ["B1zguy <6235689+B1zguy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
